--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -69,25 +69,25 @@
     <button id="js-sync-event-btn">断网后 重连同步</button>
 	<input id="js-search-input" value="789" />
     <script>
-setTimeout(() => {
-		  // 在主页添加后台同步,断网后重连在次调用,在sw里有处理事件, sw要先初始化.
-	if ('serviceWorker' in navigator && 'SyncManager' in window && false) {
-        navigator.serviceWorker.ready.then(function (registration) {
-			document.getElementById('js-sync-event-btn').addEventListener('click', function () {
-				registration.sync.register(tag).then(function () {
-					console.log('后台同步已触发', tag);
-
-					// 使用postMessage进行数据通信
-					var inputValue = document.querySelector('#js-search-input').value;
-					var msg = JSON.stringify({type: 'bgsync', msg: {name: inputValue}});
-					navigator.serviceWorker.controller.postMessage(msg);
-				}).catch(function (err) {
-					console.log('后台同步触发失败', err);
-				});
-			});
-        });
-	}
-}, 3000);
+// setTimeout(() => {
+// 		  // 在主页添加后台同步,断网后重连在次调用,在sw里有处理事件, sw要先初始化.
+// 	if ('serviceWorker' in navigator && 'SyncManager' in window) {
+//         navigator.serviceWorker.ready.then(function (registration) {
+// 			document.getElementById('js-sync-event-btn').addEventListener('click', function () {
+// 				registration.sync.register(tag).then(function () {
+// 					console.log('后台同步已触发', tag);
+// 
+// 					// 使用postMessage进行数据通信
+// 					var inputValue = document.querySelector('#js-search-input').value;
+// 					var msg = JSON.stringify({type: 'bgsync', msg: {name: inputValue}});
+// 					navigator.serviceWorker.controller.postMessage(msg);
+// 				}).catch(function (err) {
+// 					console.log('后台同步触发失败', err);
+// 				});
+// 			});
+//         });
+// 	}
+// }, 3000);
       setTimeout(() => {
         $.ajax({
                 url: 'https://gw-passenger-wap.01zhuanche.com/gw-passenger-wap/zhuanche-passenger/passenger/charge/getServiceType',
