--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -66,7 +66,7 @@
   <body>
     <img src="./images/fox2.jpg" alt="a fox picture">
     <button class="add-button">Add to home screen</button>
-    <button id="js-sync-event-btn">断网后 重连同步</button>
+    <button id="js-sync-event-btn" class="add-button">断网后 重连同步</button>
 	<input id="js-search-input" value="789" />
     <script>
 // setTimeout(() => {
@@ -121,7 +121,7 @@ function getApiDataFromCache(url) {
 function getApiDataRemote(url) {
 	return new Promise((resolve, reject) => {
 		$.ajax({
-		        url: 'https://gw-passenger-wap.01zhuanche.com/gw-passenger-wap/zhuanche-passenger/api/v1/common/group/list?type=1&cid=44&nId=&sId=2',
+		        url: url,
 		        type: 'get',
 		        dataType:"json",
 		        success: function(data) {console.log(data)
@@ -131,7 +131,7 @@ function getApiDataRemote(url) {
 		    });
 	})
 }
-function queryBook() {
+function queryBook(url) {
     // 远程请求
     var remotePromise = getApiDataRemote(url);
     var cacheData;
@@ -155,7 +155,7 @@ function queryBook() {
     })
 }
 document.getElementById('js-sync-event-btn').addEventListener('click', function () {
-	queryBook()
+	queryBook('https://gw-passenger-wap.01zhuanche.com/gw-passenger-wap/zhuanche-passenger/api/v1/common/group/list?type=1&cid=44&nId=&sId=2')
 })
     </script>
 </body></html>
