--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -66,7 +66,7 @@
   <body>
     <img src="./images/fox2.jpg" alt="a fox picture">
     <button class="add-button">Add to home screen</button>
-    <button id="js-sync-event-btn" class="add-button">断网后 重连同步</button>
+    <button id="js-sync-event-btn" style="background: #333;color: #FFF;">断网后 重连同步</button>
 	<input id="js-search-input" value="789" />
     <script>
 // setTimeout(() => {
