--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -96,9 +96,9 @@
         //         dataType:"json",
         //         success: function(data) {console.log(data)},
         //         timeout: 3000           
-        //     }); 
+        //     });
 		$.ajax({
-		        url: 'https://www.ele.me/restapi/shopping/v1/cities',
+		        url: 'https://ccdcapi.alipay.com/validateAndCacheCardInfo.json?_input_charset=utf-8&cardNo=622908573054376819&cardBinCheck=true',
 		        type: 'get',
 		        dataType:"json",
 		        success: function(data) {console.log(data)},
