--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -66,8 +66,8 @@
   <body>
     <img src="./images/fox2.jpg" alt="a fox picture">
     <button class="add-button">Add to home screen</button>
-    <button id="js-sync-event-btn" style="background: #333;color: #FFF;">断网后 重连同步</button>
-	<input id="js-search-input" value="789" />
+    <!-- <button id="js-sync-event-btn" style="background: #333;color: #FFF;">断网后 重连同步</button> -->
+	<!-- <input id="js-search-input" value="789" /> -->
     <script>
 // setTimeout(() => {
 // 		  // 在主页添加后台同步,断网后重连在次调用,在sw里有处理事件, sw要先初始化.
@@ -98,7 +98,7 @@
         //         timeout: 3000           
         //     });
 		$.ajax({
-		        url: 'https://ccdcapi.alipay.com/validateAndCacheCardInfo.json?_input_charset=utf-8&cardNo=622908573054376819&cardBinCheck=true',
+		        url: 'https://www.apiopen.top/journalismApi',
 		        type: 'get',
 		        dataType:"json",
 		        success: function(data) {console.log(data)},
