--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -66,7 +66,7 @@
   <body>
     <img src="./images/fox2.jpg" alt="a fox picture">
     <button class="add-button">Add to home screen</button>
-    <!-- <button id="js-sync-event-btn" style="background: #333;color: #FFF;">断网后 重连同步</button> -->
+    <button id="js-sync-event-btn" style="background: #333;color: #FFF;">异步请求</button>
 	<!-- <input id="js-search-input" value="789" /> -->
     <script>
 // setTimeout(() => {
@@ -151,7 +151,7 @@ function queryBook(url) {
     })
 }
 document.getElementById('js-sync-event-btn').addEventListener('click', function () {
-	queryBook('https://gw-passenger-wap.01zhuanche.com/gw-passenger-wap/zhuanche-passenger/api/v1/common/group/list?type=1&cid=44&nId=&sId=2')
+	queryBook('https://www.apiopen.top/journalismApi')
 })
     </script>
 </body></html>
