--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -85,12 +85,14 @@ if ('serviceWorker' in navigator && 'SyncManager' in window) {
             });
             Notification.requestPermission(function(result) {
                 if (result === 'granted') {
+                navigator.serviceWorker.ready.then(function(registration) {
                     registration.showNotification('Vibration Sample', {
                     body: 'Buzz! Buzz!',
-                    icon: '../images/touch/chrome-touch-icon-192x192.png',
+                    icon: '/A2HS/images/fox1.jpg',
                     vibrate: [200, 100, 200, 100, 200, 100, 200],
                     tag: 'vibration-sample'
                     });
+                });
                 }
             });
         });
