--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -83,6 +83,7 @@ if ('serviceWorker' in navigator && 'SyncManager' in window) {
             }).catch(function (err) {
                 console.log('后台同步触发失败', err);
             });
+            // showNotification 能够设置actions，更过的按钮，在swjs里监听
             Notification.requestPermission(function(result) {
                 if (result === 'granted') {
                 navigator.serviceWorker.ready.then(function(registration) {
