--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -61,7 +61,7 @@
     <link href="./style.css" rel="stylesheet">
     <script src="./index.js" defer=""></script>
     <link rel="manifest" href="manifest.webmanifest">
-    <script src="https://cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script>
+    <!-- <script src="https://cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script> -->
   </head>
   <body>
     <img src="./images/fox2.jpg" alt="a fox picture">
