--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -61,7 +61,7 @@
     <link href="./style.css" rel="stylesheet">
     <script src="./index.js" defer=""></script>
     <link rel="manifest" href="manifest.webmanifest">
-    <!-- <script src="https://cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script> -->
+    <script src="https://cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script>
   </head>
   <body>
     <img src="./images/fox2.jpg" alt="a fox picture">
@@ -118,7 +118,13 @@ if ('serviceWorker' in navigator && 'SyncManager' in window) {
         //         success: function(data) {console.log(data)},
         //         timeout: 3000           
         //     });
-        fetch('https://www.apiopen.top/journalismApi')
+		$.ajax({
+            url: 'https://www.apiopen.top/journalismApi',
+            type: 'get',
+            dataType:"json",
+            success: function(data) {console.log(data)},
+            timeout: 3000           
+        });
 	  
 	  // 下边代码 如果有caches里有异步缓存,在没网的时候调用cache里的数据,有网先用cache数据渲染,等fetch回来了在替换cache.
 function getApiDataFromCache(url) {
@@ -135,7 +141,17 @@ function getApiDataFromCache(url) {
     }
 }
 function getApiDataRemote(url) {
-    return fetch('https://www.apiopen.top/journalismApi')
+	return new Promise((resolve, reject) => {
+		$.ajax({
+		        url: url,
+		        type: 'get',
+		        dataType:"json",
+		        success: function(data) {console.log(data)
+					resolve(data)
+				},
+		        timeout: 3000           
+		    });
+	})
 }
 function queryBook(url) {
     // 远程请求
