--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -102,6 +102,7 @@
       effect: 'flip',
       grabCursor: true,
       loop: true,
+      autoplay:true,
       pagination: {
         el: '.swiper-pagination',
       },
