--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -63,6 +63,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <script src="https://cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script>
     <script src="./js/swiper.min.js"></script>
+    <script src="../vconsole.min.js"></script>
     <script src="./js/swiper.animate1.0.3.min.js"></script>
     <link rel="stylesheet" href="./css/swiper.min.css">
     <link rel="stylesheet" href="./css/animate.min.css">
