--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -71,6 +71,7 @@
     .swiper-container {
       width: 300px;
       height: 300px;
+      padding-top: 30px;
     }
     .swiper-slide {
       background-position: center;
