--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -99,6 +99,7 @@
     <button id="js-sync-event-btn" style="background: #333;color: #FFF;">异步请求</button>
     <input style="display: none;" id="js-search-input" value="789" />
     <script>
+    console.log(window.Notification.permission)
     window.vConsole = new window.VConsole();
     var swiper = new Swiper('.swiper-container', {
       effect: 'flip',
