--- a/index.html
+++ b/index.html
@@ -1,25 +1,5 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1">
-    <title>example-vue-workbox</title>
-    <link rel=manifest href=/static/manifest.json>
-    <meta name=theme-color content=#2874f0>
-    <meta name=apple-mobile-web-app-capable content=yes><meta name=apple-mobile-web-app-status-bar-style content=black>
-    <meta name=apple-mobile-web-app-title content=pwa-mpa><link rel=apple-touch-icon href=/static/img/icons/apple-touch-icon-152x152.png>
-    <meta name=msapplication-TileImage content=/static/img/icons/msapplication-icon-144x144.png>
-    <meta name=msapplication-TileColor content=#000000>
-    <link rel=preload href=/static/js/manifest.ec5c1604a6b436be2d23.js as=script><link rel=preload href=/static/js/vendor.502a4784ff2a9d0dc783.js as=script>
-    <link rel=preload href=/static/js/app.29b0a3ae566274ca7f2c.js as=script><link rel=preload href=/static/css/app.229646f7de33d1ee35a4aa0549e7de24.css as=style>
-    <link href=/static/css/app.229646f7de33d1ee35a4aa0549e7de24.css rel=stylesheet></head>
-    <body><div id=app></div>
-<script type=text/javascript src=/static/js/manifest.ec5c1604a6b436be2d23.js></script>
-<script type=text/javascript src=/static/js/vendor.502a4784ff2a9d0dc783.js></script>
-<script type=text/javascript src=/static/js/app.29b0a3ae566274ca7f2c.js></script><script>
-    window.onload = function () {
-        var script = document.createElement('script');
-        var firstScript = document.getElementsByTagName('script')[0];
-        script.type = 'text/javascript';
-        script.async = true;
-        script.src = '/sw-register.js?v=' + Date.now();
-        firstScript.parentNode.insertBefore(script, firstScript);
-    };
-</script>
-</body></html>
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>peavue</title><link rel=manifest href=./static/manifest.webmanifest><script type=text/javascript>(function() {
+        if('serviceWorker' in navigator) {
+          navigator.serviceWorker.register('/service-worker.js');
+        }
+      })();</script><link href=/static/css/app.9d3bb39fc20cf452fb62628cd9209aec.css rel=stylesheet></head><body><div id=app></div><script type=text/javascript src=/static/js/manifest.2ae2e69a05c33dfc65f8.js></script><script type=text/javascript src=/static/js/vendor.9242fcb2295522aa2d46.js></script><script type=text/javascript src=/static/js/app.91828b67e8e17a5d0865.js></script></body></html>
