--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>peavue</title><link rel=manifest href=./static/manifest.webmanifest><script type=text/javascript>(function() {
+<!DOCTYPE html><html><head><meta charset=utf-8><meta name=viewport content="width=device-width,initial-scale=1"><title>peavue</title><link rel=manifest href=./static/manifest.webmanifest><link rel=manifest href=./static/css/swiper.min.css><link rel=manifest href=./static/css/animate.min.css><script src=./static/js/swiper.min.js></script><script src=./static/js/swiper.animate1.0.3.min.js></script><script type=text/javascript>(function() {
         if('serviceWorker' in navigator) {
           navigator.serviceWorker.register('/service-worker.js');
         }
