--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -94,13 +94,13 @@
     </div>
     <!-- Add Pagination -->
     <div class="swiper-pagination"></div>
-    </div>
+    </div>    
+    <button class="add-button">Add to home screen</button>
     <button id="js-sync-event-btn" style="background: #333;color: #FFF;">同步</button>
     <button id="js-btn" style="background: #333;color: #FFF;">异步请求</button>
     <button id="js-n" style="background: #333;color: #FFF;">通知提醒</button>
     <input style="display: none;" id="js-search-input" value="789" />
     ❤️❤️❤️❤️❤️❤️❤️❤️❤️❤️
-    <button class="add-button">添加到桌面</button>
     <script>
     window.vConsole = new window.VConsole();
     var swiper = new Swiper('.swiper-container', {
