--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -61,7 +61,8 @@
     <link href="./style.css" rel="stylesheet">
     <script src="./index.js" defer=""></script>
     <link rel="manifest" href="manifest.webmanifest">
-    <script src="https://cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script>
+    <script src="//cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script>
+    <script src="//unpkg.com/dexie@latest/dist/dexie.js"></script>
     <script src="./js/swiper.min.js"></script>
     <script src="../vconsole.min.js"></script>
     <script src="./js/swiper.animate1.0.3.min.js"></script>
