--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="//cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script>
-    <title>myapp</title>
+    <title>麦卡出行</title>
   </head>
   <body>
     <noscript>
