--- a/A2HS/index.html
+++ b/A2HS/index.html
@@ -84,6 +84,15 @@
         width: 100%;height: auto;
     }
 </style>
+<script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?cc4ed125a651675a68b431dfa7f04397";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
   </head>
   <body>
     <div class="swiper-container">
