--- a/personal/map.html
+++ b/personal/map.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
-	<script src = "https://webapi.amap.com/maps?v=1.4.10&key=565a6b4ad06b2391b8a81eaf2bdcf511"></script>
+<script src="//libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
+	<script src = "//webapi.amap.com/maps?v=1.4.10&key=565a6b4ad06b2391b8a81eaf2bdcf511"></script>
     <title>定位</title>
 </head>
 <body>
