--- a/personal/map.html
+++ b/personal/map.html
@@ -32,6 +32,7 @@
 				// 查询成功，result即为当前所在城市信息
 				console.log(result)
 				var str = '返回信息：' + result.adcode + '' + result.city + '' + result.province
+				$('#citysearch').html(str)
 				}
 			})
 		})
