--- a/personal/map.html
+++ b/personal/map.html
@@ -6,7 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <script src="//libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
 	<script src = "//webapi.amap.com/maps?v=1.4.10&key=565a6b4ad06b2391b8a81eaf2bdcf511"></script>
-    <title>定位</title>
+	<title>定位</title>
+	<style>
+		#citysearch{
+			border: 1px solid #d0f;
+		}
+	</style>
 </head>
 <body>
 	<div id="container"></div>
