--- a/personal/map.html
+++ b/personal/map.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<script src="//libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
-	<script src = "//webapi.amap.com/maps?v=1.4.10&key=565a6b4ad06b2391b8a81eaf2bdcf511"></script>
+<script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
+	<script src = "http://webapi.amap.com/maps?v=1.4.10&key=565a6b4ad06b2391b8a81eaf2bdcf511"></script>
 	<title>定位</title>
 	<style>
 		#citysearch{
@@ -19,6 +19,7 @@
 22334455
 	</div>
 	<div id="citysearch"></div>
+	<div id="geo"></div>
 	<script type="text/javascript">
 	    //初始化地图时，若center属性缺省，地图默认定位到用户所在城市的中心
 	    var map = new AMap.Map('container', {
@@ -40,6 +41,35 @@
 				$('#citysearch').html(str)
 				}
 			})
+		})
+		map.plugin('AMap.Geolocation', function() {
+			var geolocation = new AMap.Geolocation({
+				// 是否使用高精度定位，默认：true
+				enableHighAccuracy: true,
+				// 设置定位超时时间，默认：无穷大
+				timeout: 10000,
+				// 定位按钮的停靠位置的偏移量，默认：Pixel(10, 20)
+				buttonOffset: new AMap.Pixel(10, 20),
+				//  定位成功后调整地图视野范围使定位位置及精度范围视野内可见，默认：false
+				zoomToAccuracy: true,     
+				//  定位按钮的排放位置,  RB表示右下
+				buttonPosition: 'RB'
+			})
+
+			geolocation.getCurrentPosition()
+			AMap.event.addListener(geolocation, 'complete', onComplete)
+			AMap.event.addListener(geolocation, 'error', onError)
+
+			function onComplete (data) {
+				// data是具体的定位信息
+				console.log(data)
+				var str = data.addressComponent.adcode
+				$('#geo').html(str)
+			}
+
+			function onError (data) {
+				// 定位出错
+			}
 		})
 		
 	</script>
