--- a/myapp/public/index.html
+++ b/myapp/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <script src="//cdn.bootcss.com/jquery/1.8.0/jquery-1.8.0.js"></script>
     <script src="./js/vconsole.min.js"></script>
+    <script src="//unpkg.com/dexie@latest/dist/dexie.js"></script>
     <title>麦卡出行</title>
   </head>
   <body>
