--- a/myapp/public/home.html
+++ b/myapp/public/home.html
@@ -11,6 +11,6 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
-    <div id="home""></div>
+    <div id="app""></div>
   </body>
 </html>
