--- a/webDemo/文字走光.html
+++ b/webDemo/文字走光.html
@@ -8,22 +8,22 @@
 		font-size: 100px;
 	}
 	@-webkit-keyframes aniBlink {
-  from {
-    margin-left: -20px;
+    from {
+    transform: translateX(-100%);
   }
 
   to {
-    margin-left: 800px;
+    transform: translateX(800%);
   }
 }
 
 @keyframes aniBlink {
   from {
-    margin-left: -20px;
+    transform: translateX(-100%);
   }
 
   to {
-    margin-left: 800px;
+    transform: translateX(800%);
   }
 }
 .title {
@@ -44,8 +44,8 @@
   background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0, rgba(255, 255, 255, 0.4) 50%, rgba(255, 255, 255, 0) 100%);
   -webkit-transform: skewX(-45deg);
           transform: skewX(-45deg);
-  -webkit-animation: aniBlink 1s ease-in-out forwards infinite;
-          animation: aniBlink 1s ease-in-out forwards infinite;
+  -webkit-animation: aniBlink 2s ease-in-out forwards infinite;
+          animation: aniBlink 2s ease-in-out forwards infinite;
           }
 </style>
 </head>
