--- a/webDemo/圆点动画.html
+++ b/webDemo/圆点动画.html
@@ -96,5 +96,8 @@ top: -6px;
 			<div class="chepai01">京BKK23456</div>
 		</span>
 	</div>
+	<img src="./img/car_gray.svg" alt="">
+	<img src="./img/car_service.svg" alt="">
+	<img src="./img/car_wait.svg" alt="">
 </body>
 </html>
