--- a/webDemo/map.html
+++ b/webDemo/map.html
@@ -5,26 +5,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <script src="http://libs.baidu.com/jquery/1.8.3/jquery.min.js"></script>
-	<script src = "https://webapi.amap.com/maps?v=1.4.10&key=565a6b4ad06b2391b8a81eaf2bdcf511"></script>
+	<script src = "https://webapi.amap.com/maps?v=1.4.10&key=565a6b4ad06b2391b8a81eaf2bdcf511&plugin=AMap.Driving"></script>
+	<script type="text/javascript" src="https://cache.amap.com/lbs/static/addToolbar.js"></script>
     <title>定位</title>
+		<style type="text/css">
+			*{
+				margin:0;
+				padding: 0;
+				border: 1;
+			}
+			body{
+				overflow: hidden;
+				position: relative;
+			}
+			#container {
+				width: 100%;
+				height: 100vh;
+			}
+			#app{
+				position: absolute;
+				left: 10px;
+				right: 10px;
+				bottom: 1px;
+				height: 300px;
+				background-color: rgb(255,255,255,0.9);
+			}
+		</style>
 </head>
 <body>
 	<div id="container"></div>
-    <div id="baidu_geo">
-22334455
+    <div id="app">
+    	弹层展示
     </div>
-	<script type="text/javascript">
-	    //初始化地图时，若center属性缺省，地图默认定位到用户所在城市的中心
-	    var map = new AMap.Map('container', {
-	        resizeEnable: true
-	    });
-		map.getCity(function(r){
-			console.log(r)
-			var str = '当前城市adcode：'+map.getAdcode()+'<br>'+'当前中心点：'+map.getCenter()+'<br>' + '当前城市：' + r.province + r.city + r.district+'<br>' +'城市citycode：' + r.citycode 
-			console.log(str)
-			$('#baidu_geo').html(str)
-		})
-		
-	</script>
+    <script type="text/javascript">
+        //基本地图加载
+        var map = new AMap.Map("container", {
+            resizeEnable: true,
+            center: [116.397428, 39.90923],//地图中心点
+            zoom: 13 //地图显示的缩放级别
+        });
+        //构造路线导航类
+        var driving = new AMap.Driving({
+            map: map,
+          autoFitView: true,
+          hideMarkers: true
+        }); 
+				function aa () {
+        // 根据起终点经纬度规划驾车导航路线
+        driving.search(new AMap.LngLat(116.379028, 39.865042), new AMap.LngLat(116.427281, 39.903719), function(status, result) {
+            // result 即是对应的驾车导航信息，相关数据结构文档请参考  https://lbs.amap.com/api/javascript-api/reference/route-search#m_DrivingResult
+            if (status === 'complete') {
+                console.log('绘制驾车路线完成')
+                var m1 = new AMap.Marker({
+          position: [116.379028, 39.865042]
+        });
+        var m2 = new AMap.Marker({
+          position: [116.427281, 39.903719]
+        });
+              map.add(m1);
+        map.add(m2);
+              infoWindow = new AMap.InfoWindow({
+          isCustom: true,
+          content: "7777777777777777777",
+          offset: new AMap.Pixel(0, -22)
+        });
+              infoWindow.open(map, [116.427281, 39.903719])
+							console.log(map.getAllOverlays())
+							map.setFitView('','',[60,300,120,120]);
+							// map.setZoom(map.getZoom() - 1)
+							// map.panBy(0,-50);
+              
+            } else {
+                console.log('获取驾车数据失败：' + result)
+            }
+        });
+				}
+				aa()
+				setInterval(function(){
+					aa()
+				},5000)
+    </script>
 </body>
 </html>
