--- a/webDemo/music动画.html
+++ b/webDemo/music动画.html
@@ -113,5 +113,30 @@ body {
 			$(".playing").find("span").toggleClass("playon")
 		})
 	</script>
+	
+	<script type="text/javascript">
+		// 完美解决 ios10 及以上 Safari 无法禁止缩放的问题
+		 window.onload = function() {
+		    // 阻止双击放大
+		    var lastTouchEnd = 0;
+		    document.addEventListener('touchstart', function(event) {
+		        if (event.touches.length > 1) {
+		            event.preventDefault();
+		        }
+		    });
+		    document.addEventListener('touchend', function(event) {
+		        var now = (new Date()).getTime();
+		        if (now - lastTouchEnd <= 300) {
+		            event.preventDefault();
+		        }
+		        lastTouchEnd = now;
+		    }, false);
+		
+		    // 阻止双指放大
+		    document.addEventListener('gesturestart', function(event) {
+		        event.preventDefault();
+		    });
+		}
+	</script>
 </body>
 </html>
